--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -12,6 +12,8 @@
   align-items: center;
   justify-content: center;
   max-width: 360px;
+  height: 200px;
+  overflow: hidden;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.18),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.18);
 }
